minor spacing and transition fixes

--- a/src/styles/partials/_art.scss
+++ b/src/styles/partials/_art.scss
@@ -99,6 +99,7 @@
             height: .5rem;
             margin-top: -.25rem;
             background: $bit-blue;
+            transition: all .3s ease-out;
             position: absolute;
             right: 0;
             border-radius: 50%;
